--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://52.14.50.10:9000/</sonar.host.url>
-		<sonar.login>gaelle</sonar.login>
+		<sonar.login>gaele</sonar.login>
 		<sonar.password>Zion2020</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
