--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.96.53.130:9000/</sonar.host.url>
-		<sonar.login>gaele</sonar.login>
+		<sonar.login>vicky</sonar.login>
 		<sonar.password>Zion2020</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>LION TECH ACADEMY Releases Nexus Repository</name>
-	      <url>http://35.183.206.222:8081/repository/liontech-cicd-release/</url>
+	      <url>http://18.118.185.25:8081/repository/vicky-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>LION TECH ACADEMY Snapshot Nexus Repository </name>
-	      <url>http://35.183.206.222:8081/repository/liontech-snapshot-cicd/</url>
+	      <url>http://18.118.185.25:8081/repository/vicky-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
